; ModuleID = '/home/carl/AnghaBench/git/extr_shallow.c_advertise_shallow_grafts.c'
source_filename = "/home/carl/AnghaBench/git/extr_shallow.c_advertise_shallow_grafts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@the_repository = common dso_local global i32 0, align 4
@advertise_shallow_grafts_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @advertise_shallow_grafts(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @the_repository, align 4
  %4 = call i32 @is_repository_shallow(i32 %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %10

7:                                                ; preds = %1
  %8 = load i32, i32* @advertise_shallow_grafts_cb, align 4
  %9 = call i32 @for_each_commit_graft(i32 %8, i32* %2)
  br label %10

10:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @is_repository_shallow(i32) #1

declare dso_local i32 @for_each_commit_graft(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
